// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Heading UU5.Bricks.Heading - onScrollToBlocked() 1`] = `
<Heading
  content="Bricks.Heading"
  fixedOnScroll={true}
  onScrollToBlocked={[Function]}
  onScrollToFixed={[Function]}
  style={
    Object {
      "backgroundColor": "cornflowerblue",
      "padding": "10px",
    }
  }
/>
`;

exports[`UU5.Bricks.Heading UU5.Bricks.Heading - onScrollToBlocked() 2`] = `
<Heading
  content="Bricks.Heading"
  fixedOnScroll={true}
  onScrollToBlocked={[Function]}
  onScrollToFixed={[Function]}
  style={
    Object {
      "backgroundColor": "cornflowerblue",
      "padding": "10px",
    }
  }
/>
`;

exports[`UU5.Bricks.Heading UU5.Bricks.Heading - onScrollToFixed() 1`] = `
<Heading
  content="Bricks.Heading"
  fixedOnScroll={true}
  onScrollToBlocked={[Function]}
  onScrollToFixed={[Function]}
  style={
    Object {
      "backgroundColor": "cornflowerblue",
      "padding": "10px",
    }
  }
/>
`;

exports[`UU5.Bricks.Heading UU5.Bricks.Heading - onScrollToFixed() 2`] = `
<Heading
  content="Bricks.Heading"
  fixedOnScroll={true}
  onScrollToBlocked={[Function]}
  onScrollToFixed={[Function]}
  style={
    Object {
      "backgroundColor": "cornflowerblue",
      "padding": "10px",
    }
  }
/>
`;

exports[`UU5.Bricks.Heading checkGrammar=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading checkGrammar=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading checkHighlight=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading checkHighlight=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading checkSpaces=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading checkSpaces=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading className="my-classname" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading my-classname"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading content="This is Content from ContentMixin" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="This is Content from ContentMixin"
    />
  </div>
</Fragment>
`;

exports[`UU5.Bricks.Heading content=12345 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  >
    12345
  </div>
</Fragment>
`;

exports[`UU5.Bricks.Heading controlled=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading controlled=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading default props 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading disabled=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading disabled=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading uu5-common-disabled"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  >
    <span
      className="uu5-common-disabled-cover"
      key="disabledCover"
    />
  </div>
</Fragment>
`;

exports[`UU5.Bricks.Heading docKit examples UU5.Bricks.Heading example01 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Heading
    content="Fixed"
    fixed={true}
    id="uuID"
    key="uuID"
    style={
      Object {
        "backgroundColor": "cornflowerblue",
        "padding": "10px",
      }
    }
  />
  <Paragraph
    id="uuID02"
    key="uuID02"
  />
</div>
`;

exports[`UU5.Bricks.Heading dynamic=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading dynamic=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading fixed=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading fixed=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading uu5-bricks-heading-fixed"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
  <div
    className="uu5-bricks-heading-ghost"
    key="ghost"
    style={
      Object {
        "height": null,
      }
    }
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading fixedOnScroll=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading fixedOnScroll=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading hidden=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading hidden=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading uu5-common-hidden"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading hideOnScroll=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading hideOnScroll=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading id="myId" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="myId"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading ignoreHTML=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading ignoreHTML=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading mainAttrs=undefined 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading name="myName" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    name="myName"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel="bigBox" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel="bigBoxCollection" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel="box" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel="boxCollection" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel="container" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Heading nestingLevel="page" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.Heading nestingLevel="smallBoxCollection" 1`] = `""`;

exports[`UU5.Bricks.Heading nestingLevel="spa" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading noIndex=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading noIndex=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading uu5-noindex"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading pureRender=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading pureRender=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading selected=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading selected=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading uu5-common-selected"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading spaceHolder=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading spaceHolder=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading style="padding:8px; borderRadius: 2px" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading style={"backgroundColor":"red","color":"blue"} 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading textCorrector=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading textCorrector=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Heading tooltip="My Tooltip" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-heading"
    id="uuID"
    key="main"
    style={Object {}}
    title="My Tooltip"
  />
</Fragment>
`;
